--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+**/node_modules
+*/node_modules
+**/.pnp
 .pnp.js
 
 # testing
 /coverage
 
 # next.js
-/.next/
-/out/
+**/.next/
+**/out/
 
 # production
 /build
@@ -32,3 +33,5 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+.vscode
