--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^16.9.1",
+    "@types/react": "^17.0.21",
+    "autoprefixer": "^10.3.4",
     "next": "11.1.2",
+    "peerjs": "^1.3.2",
+    "postcss": "^8.3.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.15",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
     "eslint": "7.32.0",
