--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-**/node_modules
-*/node_modules
-**/.pnp
-.pnp.js
+**node_modules
+**.pnp
 
 # testing
 /coverage
@@ -34,4 +32,8 @@ yarn-error.log*
 # vercel
 .vercel
 
-.vscode
+**/.vscode
+**/package-lock.json
+
+.env
+**.sql
