--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@types/node": "^16.9.1",
-    "@types/react": "^17.0.21",
+    "@types/react": "^17.0.33",
     "autoprefixer": "^10.3.4",
-    "next": "11.1.2",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
+    "mysql": "^2.18.1",
+    "next": "^12.0.3",
+    "next-auth": "^3.29.0",
     "peerjs": "^1.3.2",
     "postcss": "^8.3.6",
     "react": "17.0.2",
