--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.3.4",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "next": "^12.0.3",
     "next-auth": "^3.29.0",
