--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-	"test_secure": "node server.js",
+    "test_secure": "node server.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.33",
     "autoprefixer": "^10.3.4",
     "bcrypt": "^5.0.1",
+    "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "next": "^12.0.3",
