--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "next": "^12.0.3",
     "peerjs": "^1.3.2",
     "postcss": "^8.3.6",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "^2.2.15",
+    "tailwindcss": "^3.0.7",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
