--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+		"format": "npx prettier --use-tabs --single-quote --write --ignore-path .gitignore ./pages/"
   },
   "dependencies": {
     "@types/node": "^16.9.1",
@@ -19,6 +20,7 @@
     "next": "^12.0.3",
     "peerjs": "^1.3.2",
     "postcss": "^8.3.6",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "tailwindcss": "^3.0.7",
