--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"iconoir-react": "^2.1.0",
 		"jsonwebtoken": "^8.5.1",
 		"next": "^12.0.3",
+		"peer": "^0.6.1",
 		"peerjs": "^1.3.2",
 		"postcss": "^8.3.6",
 		"react": "^17.0.2",
