--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
 		"dprint": "^0.19.2",
 		"iconoir-react": "^2.1.0",
 		"jsonwebtoken": "^8.5.1",
-		"next": "^12.0.3",
-		"peer": "^0.6.1",
-		"peerjs": "^1.3.2",
+		"next": "^12.0.8",
 		"postcss": "^8.3.6",
 		"react": "^17.0.2",
 		"react-dom": "17.0.2",
+		"simple-peer": "^9.11.0",
+		"socket.io": "^4.4.1",
+		"socket.io-client": "^4.4.1",
 		"tailwindcss": "^3.0.7",
 		"typescript": "^4.4.3",
 		"uuid": "^8.3.2"
