--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@aws-sdk/client-dynamodb": "^3.45.0",
 		"@types/node": "^16.9.1",
 		"@types/react": "^17.0.33",
+		"@types/simple-peer": "^9.11.4",
 		"autoprefixer": "^10.3.4",
 		"bcrypt": "^5.0.1",
 		"dprint": "^0.19.2",
